@@ -13,6 +13,7 @@ Core - General
   - Fixes issue in the CmsLayoutStylesheet class related to associating designs with new stylesheets.
   - Now check for an english language file first in module_custom/xxxxx/lang before a file for the current language.
   - Prevent false-positive hit for "multiple_webshells_0018" rule webserver virusscanner (https://github.com/Yara-Rules/rules/blob/master/Webshells/WShell_THOR_Webshells.yar#L4764).
+  - Fixes a bug in ContentOperations::LoadAllContent() if the content list had a custom content type from a module that was unvavailable.
 
 MicroTiny v2.2.3
   - More entropy in the mt_config.js filename to fix issues with js caching when switching users.
